--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,7 +135,7 @@ jobs:
       - run: go version && go env
       - run:
           name: install go-junit-report
-          command: go install github.com/jstemmer/go-junit-report/v2@2.0.0
+          command: go install github.com/jstemmer/go-junit-report/v2@v2.0.0
       - when:
           condition: <<parameters.run-lint>>
           steps:
