--- a/.github/workflows/publish-to-acr.yml
+++ b/.github/workflows/publish-to-acr.yml
@@ -34,7 +34,7 @@ jobs:
         id: getPreReleaseTag
         shell: pwsh
         run: |
-          $tag = $env:GITHUB_REF_NAME -eq "v6" ? "" : "-$env:GITHUB_REF_NAME-$($env:GITHUB_SHA.Substring(0,7))"
+          $tag = $env:GITHUB_REF_NAME -eq "v6" ? "" : "-$($env:GITHUB_REF_NAME.Replace('/', '-'))-$($env:GITHUB_SHA.Substring(0,7))"
           Write-Output "preReleaseTag=$tag" >> $env:GITHUB_OUTPUT
 
       - name: ACR Build
