--- a/linux/etc/init/ld-relay.conf
+++ b/linux/etc/init/ld-relay.conf
@@ -6,4 +6,4 @@ stop on runlevel [!2345]
 respawn
 respawn limit 5 2
 
-exec start-stop-daemon --start -c nobody --exec /usr/local/bin/ld-relay
+exec start-stop-daemon --start -c nobody --exec /usr/bin/ld-relay
