--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,15 @@ orbs:
 parameters:
   # See "Runtime platform versions" in CONTRIBUTING.md
   # We define go-release-version here as a pipeline parameter not because we intend to
-  # override it in any parameterized builds, but just as a convenient shareable constant
+  # override it in any parameterized builds, but just as a convenient shareable constant.
   go-release-version:
     type: string
-    default: "1.19.4"
+    default: "1.20.1"
+
+  # In addition to the most recent version of Go, we also support the previous version.
+  go-previous-version:
+    type: string
+    default: "1.19.6"
 
   # We use a remote Docker host in some CI jobs that need to run Docker containers.
   # As of 2022-04-15, the default Docker daemon version was 17.09.0-ce, which started
@@ -31,26 +36,25 @@ workflows:
   workflow:
     jobs:
       - go-test:
-          name: Go 1.19
-          docker-image: cimg/go:1.19
+          name: Go <<pipeline.parameters.go-release-version>>
+          docker-image: cimg/go:<<pipeline.parameters.go-release-version>>
           run-lint: true
           test-coverage: true
       - go-test:
-          name: Go 1.18
-          docker-image: cimg/go:1.18
+          name: Go <<pipeline.parameters.go-previous-version>>
+          docker-image: cimg/go:<<pipeline.parameters.go-previous-version>>
       - benchmarks:
-          docker-image: cimg/go:1.19
+          docker-image: cimg/go:<<pipeline.parameters.go-release-version>>
       - integration-test
       - docker-images-test
 
-  # Run hourly integration tests on the private v6 branch
   hourly-integration-test-stg:
     triggers:
     - schedule:
         cron: "0 * * * *"
         filters:
           branches:
-            only: v6
+            only: v7
     jobs:
       - integration-test
     when:
@@ -61,7 +65,7 @@ workflows:
         cron: "0 * * * *"
         filters:
           branches:
-            only: v6
+            only: v7
     jobs:
       - integration-test:
           ld_api_url: https://app.launchdarkly.com
@@ -78,14 +82,14 @@ workflows:
         cron: "0 8 * * *"
         filters:
           branches:
-            only: v6
+            only: v7
     jobs:
       - package-build-test:
-          name: package build - Go 1.19
-          docker-image: cimg/go:1.19
+          name: package build - Go <<pipeline.parameters.go-release-version>>
+          docker-image: cimg/go:<<pipeline.parameters.go-release-version>>
       - package-build-test:
-          name: package build - Go 1.18
-          docker-image: cimg/go:1.18
+          name: package build - Go <<pipeline.parameters.go-previous-version>>
+          docker-image: cimg/go:<<pipeline.parameters.go-previous-version>>
 
   daily-security-scan:
     triggers:
@@ -93,7 +97,7 @@ workflows:
         cron: "0 12 * * *"
         filters:
           branches:
-            only: v6
+            only: v7
     jobs:
       - security-scan-of-current-build
       - security-scan-of-published-image
@@ -222,10 +226,8 @@ jobs:
     parameters:
       docker-image:
         type: string
-    
     docker:
       - image: <<parameters.docker-image>>
-
     steps:
       - run: go version
       - run: go install github.com/launchdarkly/ld-relay/v7@latest
