chore: update workflow_dispatch type to bool (#376)
When you manually trigger the Go version checker workflow (workflow_dispatch),
the 'force_create_issue' is a string ("false") instead of a bool. Update to type bool.

--- a/.github/workflows/check-go-versions.yml
+++ b/.github/workflows/check-go-versions.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
     inputs:
       force_create_issue:
+        type: bool
         description: 'Create issue even if versions are up-to-date'
         required: false
         default: false
