--- a/.ldrelease/config.yml
+++ b/.ldrelease/config.yml
@@ -1,4 +1,3 @@
-
 # Configuration for releasing ld-relay using the Releaser tool.
 #
 # The flow is as follows:
@@ -44,6 +43,7 @@ jobs:
       name: go
 
 branches:
+  - name: v8
   - name: v7
   - name: v6
   - name: v5
