chore: update Alpine from 3.18 to 3.19 and bump Go patch (#494)
Updates Alpine to 3.18 -> 3.19, bumps Go from 1.21.3 -> 1.21.5 and penultimate from 1.20.10 -> 1.20.12.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,13 +1,12 @@
 project_name: ld-relay
 
 run:
-  deadline: 120s
+  timeout: 120s
   tests: false
 
 linters:
   enable:
     - bodyclose
-    - depguard
     - dupl
     - errcheck
     - goconst
