ci: hourly integration tests should be independent (#511)
If hourly integration tests fail on (staging|production), it'll cancel
the other job. We don't want that.

--- a/.github/workflows/hourly-integration-tests.yml
+++ b/.github/workflows/hourly-integration-tests.yml
@@ -21,6 +21,8 @@ jobs:
   integration-test:
     needs: go-versions
     strategy:
+      # Let each job fail independently.
+      fail-fast: false
       matrix:
         environment: ['staging', 'production']
 
