--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,7 +23,8 @@ jobs:
   release-relay:
     permissions:
       id-token: write # Needed to obtain Docker tokens
-      contents: read
+      contents: write # Needed to upload release artifacts
+
     needs: [ release-please, go-versions ]
     if: ${{ needs.release-please.outputs.release_created == 'true' }}
     runs-on: ubuntu-latest
@@ -38,13 +39,15 @@ jobs:
           aws_assume_role: ${{ vars.AWS_ROLE_ARN }}
           ssm_parameter_pairs: '/global/services/docker/public/username = DOCKER_USERNAME, /global/services/docker/public/token = DOCKER_TOKEN'
 
-      - uses: ./.github/actions/unit-tests
+      - name: Setup Go ${{ needs.go-versions.outputs.latest }}
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ needs.go-versions.outputs.latest }}
 
+      - uses: ./.github/actions/unit-tests
+
       - uses: ./.github/actions/publish
         with:
-          go-version: ${{ needs.go-versions.outputs.latest }}
           dry-run: 'false'
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ needs.release-please.outputs.tag_name }}
