--- a/.github/actions/unit-tests/action.yml
+++ b/.github/actions/unit-tests/action.yml
@@ -1,9 +1,6 @@
 name: Unit Tests
 description: "Runs Relay's unit tests + linters and optionally gathers coverage."
 inputs:
-  go-version:
-    description: 'Go version to use for build & test.'
-    required: true
   lint:
     description: 'Whether to run linters.'
     required: false
@@ -16,6 +13,11 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Get Go version
+      id: go-version
+      shell: bash
+      run: |
+        echo "version=$(go version | awk '{print $3}')" >> $GITHUB_OUTPUT
     - name: Lint
       if: inputs.lint == 'true'
       shell: bash
@@ -43,12 +45,12 @@ runs:
       if: steps.process-test.outcome == 'success'
       uses: actions/upload-artifact@v4
       with:
-        name: Test-result-go${{ inputs.go-version }}
+        name: Test-result-${{ steps.go-version.outputs.version }}
         path: junit_report.xml
 
     - name: Upload coverage results
       if: steps.test-coverage.outcome == 'success'
       uses: actions/upload-artifact@v4
       with:
-        name: Coverage-result-go${{ inputs.go-version }}
+        name: Coverage-result-${{ steps.go-version.outputs.version }}
         path: build/coverage*
