--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -24,6 +24,10 @@ runs:
     - name: Git clean
       shell: bash
       run: git clean -f
+    - name: Login to Docker
+      shell: bash
+      run: |
+        echo $DOCKER_TOKEN | docker login --username $DOCKER_USERNAME --password-stdin
     - name: Run Goreleaser
       uses: goreleaser/goreleaser-action@v5
       with:
