--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -15,9 +15,19 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Setup Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      with:
+        platforms: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/386
     - name: Git clean
       shell: bash
       run: git clean -f
+    - name: Login to Docker
+      shell: bash
+      run: |
+        echo $DOCKER_TOKEN | docker login --username $DOCKER_USERNAME --password-stdin
     - name: Run Goreleaser
       uses: goreleaser/goreleaser-action@v5
       with:
