chore(v7): set release-please target branch

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           release-type: simple
           token: ${{secrets.GITHUB_TOKEN}}
+          target-branch: v7
 
   release-relay:
     permissions:
