--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -28,11 +28,6 @@ runs:
       shell: bash
       run: |
         echo $DOCKER_TOKEN | docker login --username $DOCKER_USERNAME --password-stdin
-    - name: Check if default branch
-      uses: launchdarkly/gh-actions/actions/default-branch@ead22860bb097df32a9a1a2d06066922b00b86ca
-      id: default-branch
-      with:
-        token: ${{ inputs.token }}
     - name: Run Goreleaser
       uses: goreleaser/goreleaser-action@v5
       with:
@@ -40,7 +35,7 @@ runs:
         args: release --clean ${{ inputs.dry-run == 'true' && '--skip=publish' || '' }}
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
-        DEFAULT_BRANCH: ${{ steps.default-branch.outputs.value }}
+        NOT_DEFAULT_BRANCH: ${{ github.ref_name != github.event.repository.default_branch }}
 
     - name: Upload Release Artifacts
       shell: bash
