--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -83,7 +83,7 @@ dockers:
     goos: linux
     goarch: '386'
     dockerfile: Dockerfile.goreleaser
-    skip_push: "{{ if .Env.DEFAULT_BRANCH eq .Major }}false{{ else }}true{{ end }}"
+    skip_push: "{{ .Env.NOT_DEFAULT_BRANCH }}"
     build_flag_templates:
     - "--pull"
     - "--platform=linux/386"
@@ -108,7 +108,7 @@ dockers:
     goos: linux
     goarch: amd64
     dockerfile: Dockerfile.goreleaser
-    skip_push: "{{ if .Env.DEFAULT_BRANCH eq .Major }}false{{ else }}true{{ end }}"
+    skip_push: "{{ .Env.NOT_DEFAULT_BRANCH }}"
     build_flag_templates:
     - "--pull"
     - "--platform=linux/amd64"
@@ -135,7 +135,7 @@ dockers:
     goarch: arm
     goarm: 7
     dockerfile: Dockerfile.goreleaser
-    skip_push: "{{ if .Env.DEFAULT_BRANCH eq .Major }}false{{ else }}true{{ end }}"
+    skip_push: "{{ .Env.NOT_DEFAULT_BRANCH }}"
     build_flag_templates:
     - "--pull"
     - "--platform=linux/arm/v7"
@@ -160,7 +160,7 @@ dockers:
     goos: linux
     goarch: arm64
     dockerfile: Dockerfile.goreleaser
-    skip_push: "{{ if .Env.DEFAULT_BRANCH eq .Major }}false{{ else }}true{{ end }}"
+    skip_push: "{{ .Env.NOT_DEFAULT_BRANCH }}"
     build_flag_templates:
     - "--pull"
     - "--platform=linux/arm64/v8"
@@ -183,7 +183,7 @@ docker_manifests:
     - "launchdarkly/ld-relay:v{{ .Major }}-i386"
 
   - name_template: "launchdarkly/ld-relay:latest"
-    skip_push: "{{ if .Env.DEFAULT_BRANCH eq .Major }}false{{ else }}true{{ end }}"
+    skip_push: "{{ .Env.NOT_DEFAULT_BRANCH }}"
     image_templates:
     - "launchdarkly/ld-relay:latest-amd64"
     - "launchdarkly/ld-relay:latest-armv7"
