--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -35,6 +35,7 @@ runs:
         args: release --clean ${{ inputs.dry-run == 'true' && '--skip=publish' || '' }}
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
+        NOT_DEFAULT_BRANCH: ${{ github.ref_name != github.event.repository.default_branch }}
 
     - name: Upload Release Artifacts
       shell: bash
